Changes style file and adds style path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
 <html>
   <h1>Hello world</h1>
   {{ content }}
