--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,11 @@
 
 	<a href="{{ page.url }}" title="{{ page.title }}">
 
-			<img class="avatar" src="{{ site.logo | replace: "300", "72" }}" alt="{{ site.title }}" srcset="{{ site.logo | replace: "300", "72" }}  72w, {{ site.logo | replace: "300", "144" }} 144w">
+			<img class="avatar" src="{{ site.logo | replace: "300", "72" }}" alt="{{ site.title }}" srcset="{{ site.logo | replace: "300", "72" }}  72w, {{ site.logo | replace: "300", "144" }} 144w" width="72" height="72">
 
 	</a>
+
+	{% include nav.html %}
 
 	<div class="container">
 
