Stops using bourbon, too annoying to get started with. Changes to sasslines, adds more theme styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
 	<div class="container">
 
-		<small class="small">&copy; {{ site.time | date: '%Y' }} — {{ site.title }}</small>
+		<small class="small">&copy; {{ site.time | date: '%Y' }}&nbsp;–&nbsp;{{ site.title }}</small>
 
 	</div>
 
