--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,9 +1,9 @@
 	<ul class="posts">
 		{% for item in paginator.posts %}
 
-			<li class="post">
+			<li class="post  container">
 
-				<article class="container">
+				<article class="article  typeset">
 
 					<h2>
 						<a href="{{ item.url }}" title="{{ item.title }}">{{ item.title }}</a>
