--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,13 @@
 	</head>
 	<body>
 
+		{% include header.html %}
+
 		{{ content }}
 
+		{% include footer.html %}
+
+		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Neuton" rel="stylesheet">
 		<script src="/js/scripts.js" type="text/javascript"></script>
 	</body>
 </html>
