--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,21 +2,19 @@
 layout: default
 ---
 
-<main class="container">
+<main class="main  container">
 
-	{% include header.html %}
+	<article class="article  typeset">
 
-	<article class="content">
+		<h1>{{ page.title }}</h1>
 
 		<small class="small">
 				{% assign words = content | number_of_words %}
-				<time datetime="{{ page.date | date_to_xmlschema }}" class="time">{{ page.date | date_to_string }}</time>&nbsp;&nbsp;–&nbsp;&nbsp;<span class="time  time--reading">{{ words | divided_by:180 }} minute read</span>
+				<time datetime="{{ page.date | date_to_xmlschema }}" class="time">{{ page.date | date_to_string }}</time>&nbsp;–&nbsp;<span class="time  time--reading">{{ words | divided_by:180 }} minute read</span>
 		</small>
 
 		{{ content }}
 
 	</article>
-
-	{% include footer.html %}
 
 </main>
