--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,16 +2,14 @@
 layout: default
 ---
 
-<main class="container">
+<main class="main  container">
 
-	{% include header.html %}
+	<article class="article  typeset">
 
-	<article class="content">
+		<h1>{{ page.title }}</h1>
 
 		{{ content }}
 
 	</article>
-
-	{% include footer.html %}
 
 </main>
