--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,21 +11,13 @@
 		<button class="button">Menu</button>
 
 		<nav class="nav  nav--main">
-		  {% if data.nav %}
-
-		    {% for item in data.nav %}
-		      <a class="item" href="{{ item.url }}" title="{{ item.name }}">{{ item.name }}</a>
-		    {% endfor %}
-
-		  {% else %}
 
 		    {% for page in site.pages %}
 					{% if page.title %}
-		      	<a class="item" href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a>
+		      	<a class="item" href="{{ page.url | prepend: site.baseurl }}" title="{{ page.title }}">{{ page.title | escape }}</a>
 					{% endif %}
 		    {% endfor %}
 
-		  {% endif %}
 		</nav>
 
 	</div>
