Fixes posts list, can do pagination though :cry:

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<div class="container">
 
 		{% if site.logo %}
-		  <a class="logo" href="{{ site.url }}" title="{{ site.title }}">
+		  <a class="logo" href="/" title="{{ site.title }}">
 		    <img class="image" src="{{ site.logo | replace: "300", "72" }}" alt="{{ site.title }}" srcset="{{ site.logo | replace: "300", "72" }}  72w, {{ site.logo | replace: "300", "144" }} 144w" width="72" height="72">
 		  </a>
 		{% endif %}
