--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 		<!-- General meta -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<title>{{ page.title }} - {{ site.title }}</title>
+		
 		{% if site.logo %}
 			{% include favicons.html %}
 		{% endif %}
