Complete revision of code, bringing it up to spec

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,25 +2,29 @@
 <html lang="en-GB">
 	<head>
 		<!-- General meta -->
-		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{ page.title }} - {{ site.title }}</title>
-		
-		{% if site.logo %}
-			{% include favicons.html %}
+
+		{% if page.indexing == false %}
+			<meta name="robots" content="noindex">
 		{% endif %}
 
-		<link href="/css/styles.css" media="all" rel="stylesheet" type="text/css">
+		{% if page.collection %}
+			{% seo title=false %}
+
+			{% assign collectiondata = site.collections | where: "label", page.collection | first %}
+			<title>{{ collectiondata.title }} - {{ site.title }}</title>
+		{% else %}
+			{% seo %}
+		{% endif %}
+
+    <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
+
+		{% include site-favicons.html %}
 	</head>
 	<body>
-
-		{% include header.html %}
+		{% include site-icons.svg %}
 
 		{{ content }}
 
-		{% include footer.html %}
-
-		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Neuton" rel="stylesheet">
-		<script src="/js/scripts.js" type="text/javascript"></script>
 	</body>
 </html>
