--- a/_sass/sassline-base/_variables.scss
+++ b/_sass/sassline-base/_variables.scss
@@ -56,7 +56,7 @@ $gutterwidths: (
 // Add weight and style details too.
 // ! Set cap height to set to the baseline.
 $bodytype: (
-  font-family: '"Alegreya Sans", sans-serif',
+  font-family: 'Georgia, serif',
   regular: 400,
   bold: 700,
   italic: italic,
@@ -64,7 +64,7 @@ $bodytype: (
 ) !default;
 
 $headingtype: (
-  font-family: '"Neuton", serif',
+  font-family: 'Helvetica, sans-serif',
   regular: 400,
   bold: 700,
   cap-height: 0.66
@@ -84,13 +84,25 @@ $monospacetype: (
 // Proxima Nova: 0.57, Museo Slab: 0.66, JAF Facit: 0.7, Brandon Grotesque: 0.65, Clavo: 0.7, Adelle: 0.66, FF Tisa Pro: 0.82, Jubilat: 0.66, Futura PT: 0.66, Chaparral Pro: 0.5, Minion Pro: 0.66, Myriad Pro: 0.66, Adobe Caslon Pro: 0.36
 
 // Text colours. British English.
-$headingColour: darken(#46412A, 5%) !default;
-$bodyColour: #46412A !default;
-$linkColour: #5B5BFF !default;
-$hoverColour: darken(#5B5BFF, 10%) !default;
-$captionColour: #46412A !default;
+$headingColour: #2E2E2E !default;
+$bodyColour: #494949 !default;
+$linkColour: #0E58F5 !default;
+$hoverColour: #0B348B !default;
+$captionColour: #BDC8CC !default;
 $white: #FFFFFF !default;
 
 // Background colours.
-$backgroundColour: #ffefc8 !default;
-$codeBackgroundColour: darken(#ffefc8, 5%) !default;
+$backgroundColour: #FCFCFC !default;
+$codeBackgroundColour: #F5F4F2 !default;
+
+
+// Alembic reassigned variables
+$headingColour: $color__site--heading;
+$bodyColour: $color__site--body;
+$linkColour: $color__site--link;
+$hoverColour: $color__site--link--hover;
+$captionColour: $color__site--captions;
+$white: #fff;
+
+$backgroundColour: $color__site--background;
+$codeBackgroundColour: darken($color__site--background, 5%);
