More cleaning up, plus styles to match original design

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -18,7 +18,7 @@
 {% else %}
 	<h2>Latest blog posts</h2>
 	<ul class="list  list--posts">
-		{% for page in site.posts limit: 4 %}
+		{% for page in site.posts %}
 			<li class="item  item--post">
 				<article class="article  article--post  typeset">
 
