--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -2,9 +2,6 @@
   <div class="container">
     {% include site-logo.html %}
 
-    {% include nav-header.html %}
+    {% include site-nav.html %}
   </div>
-
-  {% include site-feature.html %}
-
 </header>
