--- a/_sass/sassline-base/_variables.scss
+++ b/_sass/sassline-base/_variables.scss
@@ -56,7 +56,7 @@ $gutterwidths: (
 // Add weight and style details too.
 // ! Set cap height to set to the baseline.
 $bodytype: (
-  font-family: 'Georgia, serif',
+  font-family: '"Alegreya Sans", sans-serif',
   regular: 400,
   bold: 700,
   italic: italic,
@@ -64,7 +64,7 @@ $bodytype: (
 ) !default;
 
 $headingtype: (
-  font-family: 'Helvetica, sans-serif',
+  font-family: '"Neuton", serif',
   regular: 400,
   bold: 700,
   cap-height: 0.66
