Getting the new version up to spec, removing any unwanted code and matching it with the original design

--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -1,8 +1,8 @@
 <nav class="nav">
   <ul class="list list--nav">
     {% for item in site.pages %}
-      {% unless item.styles == true or item.url contains "/page" or item.url == "/404.html" %}
-        <li class="item  item--nav{% if item[1] == page.url %}  item--current{% endif %}">
+      {% unless item.url contains ".css" or item.url contains "/page" or item.url contains "/404.html" %}
+        <li class="item  item--nav{% if item.url == page.url %}  item--current{% endif %}">
           {% if item.collectionpage %}
       			{% assign collectiondata = site.collections | where: "label", item.collectionpage | first %}
       			<a href="{{ item.url }}">{{ collectiondata.title }}</a>
