--- a/_includes/site-logo.html
+++ b/_includes/site-logo.html
@@ -1,3 +1,3 @@
-<a class="logo" href="{{ site.url }}" title="{{ site.title }}">
+<a class="logo" href="{{ site.url }}">
   <img src="{{ site.logo }}" alt="{{ site.title }} logo"/>
 </a>
