--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="{{ site.lang | default: "en-US" }}">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% if page.collectionpage %}
