Make sure correct font weights are loaded #7

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,6 @@
 
 		{{ content }}
 
-		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Neuton" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700|Neuton:400,700" rel="stylesheet">
 	</body>
 </html>
