Add support for custom favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,12 @@
 			<title>{{ page.title }} - {{ site.title }}</title>
 		{% endif %}
 
-    <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
+		<link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
+		{% if site.favicon %}
+		<link rel="shortcut icon" href="{{ site.favicon }}">
+		{% else %}
 		<link rel="shortcut icon" href="{{ site.logo }}">
+		{% endif %}
 	</head>
 	<body>
 
